database connection implemented

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test-db": "node scripts/test-db.mjs"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.11",
@@ -18,6 +19,8 @@
     "clsx": "^2.1.1",
     "form": "^0.2.5",
     "lucide-react": "^0.555.0",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.1",
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
