--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,10 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+# ignore .env but allow .env.example if you use it for defaults
+.env
+.env.local
+.env.*.local
 
 # vercel
 .vercel
